# serializer version: 1
# name: test_all_entities[todo.kitchen_grocery_list-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'todo',
    'entity_category': None,
    'entity_id': 'todo.kitchen_grocery_list',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Grocery List',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Grocery List',
    'platform': 'skylight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <TodoListEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '5455113_7248050',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[todo.kitchen_grocery_list-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Grocery List',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <TodoListEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'todo.kitchen_grocery_list',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_all_entities[todo.kitchen_to_do-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'todo',
    'entity_category': None,
    'entity_id': 'todo.kitchen_to_do',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'To Do',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'To Do',
    'platform': 'skylight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <TodoListEntityFeature: 15>,
    'translation_key': None,
    'unique_id': '5455113_7248051',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[todo.kitchen_to_do-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen To Do',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <TodoListEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'todo.kitchen_to_do',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
